Leves modificaciones con colores blanco culiado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <h1>Proyecto de Equipo</h1>
-    <h2 id="team-name">Equipo Alfa</h2>
+    <h2 id="team-name">Equipo 4Tn't</h2>
     <p id="current-time"></p> </header>
 
 <main>
