--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Proyecto de Equipo</h1>
+    <h1>Proyecto En Equipo</h1>
     <h2 id="team-name">Equipo 4Tn't</h2>
     <p id="current-time"></p> </header>
 
